feat: manage metric template workflow
